Fix: Scrollbar gutter showing despite having no vertical overflow

--- a/src/compress-scr.css
+++ b/src/compress-scr.css
@@ -64,7 +64,7 @@
         margin-right: 6;
         background: #212121;
         overflow: auto;
-        scrollbar-gutter: stable;
+        /*scrollbar-gutter: stable;*/
 }
 
 .full-width {
